# CAPA

./: .gitignore  CLAUDE.md  DIRECTORY_STRUCTURE.md  LICENSE  MIGRATION_GUIDE.md  README.md  check_mock_data.py  check_s3_structure.py  check_summary_detail.py  cleanup_summary_csv.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sample_query_id.txt  sample_results.json  vanna_log.txt
services/data_pipeline_t2/: AIRFLOW_PIPELINE.md  README.md  RUN_AIRFLOW.md  airflow_dag.py  check_s3_data.py  docker-compose.yaml  pyproject.toml  requirements_airflow.txt
services/data_pipeline_t2/config/: airflow.cfg
services/data_pipeline_t2/dags/: 01_ad_hourly_summary.py  01_data_quality_dag_analysis.md  02_ad_daily_summary.py  03_ad_hourly_summary_test.py  03_schema_extraction_dag_explanation.md  04_ad_daily_summary_test.py  04_dag_workflow_overview.md  05_ad_hourly_summary_period.py  06_ad_daily_summary_period.py  README.md  README_ETL_INTEGRATION.md  __init__.py  ad_daily_summary.py  ad_daily_summary_manual.py  ad_hourly_summary.py  ad_hourly_summary_manual.py
services/data_pipeline_t2/etl_summary_t2/: README.md  SUMMARY_QUERIES.md  athena_utils.py  config.py  daily_etl.py  hourly_etl.py  run_etl.py
services/data_pipeline_t2/kubernetes/: DEPLOYMENT_GUIDE.md  build-and-push.sh
services/data_pipeline_t2/log_gen_t2/: AD_LOG_GENERATOR_DESIGN.md  AD_LOG_GENERATOR_UPDATE_SUMMARY.md  README.md  README_REALTIME.md  ad_log_generator.py  requirements_realtime.txt
services/data_pipeline_t2/summary/: README.md  config.py  daily_etl.py  hourly_etl.py
services/data_pipeline_t2/tests/: IMPLEMENTATION_GUIDE.md  PYTEST_GUIDE.md  pytest.ini  test_data_quality_dag.py  test_preagg_dag.py
services/data_pipeline_t2/utils/: timestamp_converter.py
services/report-generator/t3_report_generator/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  bot.py  (+17 more)
(+896 files in other folders)
