[project]
name = "capa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "seaborn>=0.13.2",
    "pyathena>=3.30.0",
    "boto3>=1.26.0",
]
