[project]
name = "etl-summary-t2"
version = "1.0.0"
description = "ETL package for processing ad log data from S3 to summary tables"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.24.0",
    "pyarrow>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyathena>=2.0.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "python-dotenv>=0.19.0",
]

[project.scripts]
etl-summary-t2 = "etl_summary_t2.run_etl:main"

[tool.setuptools]
packages = ["etl_summary_t2"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.0.0",
]
