[project]
name = "realtime-log-generator"
version = "1.0.0"
description = "Real-time Ad Log Generator for CAPA Project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "faker>=22.0.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
python-preference = "only-managed"